fixed readability of text on dark background

--- a/style.css
+++ b/style.css
@@ -74,9 +74,10 @@ canvas {
     transform: translate(-50%, -50%);
 
     /* background: radial-gradient(149.6% 149.6% at 49.94% 48.29%, rgba(255, 255, 255, 0.1) 0%, rgba(255, 0, 0, 0) 100%); */
-    background-blend-mode: multiply;
+    /* background-blend-mode: multiply; */
     border: 0.1px solid #FFFFFF70;
-    backdrop-filter: blur(2px);
+    /* backdrop-filter: blur(2px); */
+    background: linear-gradient(104.75deg, rgba(255, 255, 255, 0.1) 20.77%, rgba(255, 255, 255, 0.1) 74.83%);
 }
 
 
